specs/invalid/missing-id.genart
{
  "genart": "1.1",
  "title": "Missing ID",
  "created": "2026-02-14T00:00:00Z",
  "modified": "2026-02-14T00:00:00Z",
  "renderer": { "type": "p5" },
  "canvas": { "width": 600, "height": 600 },
  "parameters": [],
  "colors": [],
  "state": { "seed": 1, "params": {}, "colorPalette": [] },
  "algorithm": "function sketch(p, state) { return { initializeSystem() {} }; }"
}
